// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WebhookRouterForm should render 1`] = `
<Flipper
  back={
    <Dialog
      buttons={
        Object {
          "primary": Object {
            "name": "Ok",
            "onClick": [Function],
          },
          "secondary": Object {
            "name": "Cancel",
            "onClick": [Function],
          },
        }
      }
      headerClass="call_webhook"
      headerIcon="fe-cog"
      headerStyle="barber"
      subtitle="Advanced Settings"
      title="Call Webhook"
    >
      <h4
        className="headers_title"
      >
        Headers
      </h4>
      <p
        className="info"
      >
        Add any additional headers below that you would like to send along with your request.
      </p>
      <FlipMovePropConverter
        delay={0}
        disableAllAnimations={false}
        duration={100}
        easing="ease-out"
        enterAnimation="elevator"
        getPosition={[Function]}
        leaveAnimation="elevator"
        maintainContainerHeight={false}
        staggerDelayBy={0}
        staggerDurationBy={0}
        typeName="div"
        verticalAlignment="top"
      >
        <div>
          <HeaderElement
            entry={
              Object {
                "value": Object {
                  "name": "",
                  "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
                  "value": "",
                },
              }
            }
            index={0}
            onChange={[Function]}
            onRemove={[Function]}
          />
        </div>
      </FlipMovePropConverter>
    </Dialog>
  }
  front={
    <Dialog
      buttons={
        Object {
          "primary": Object {
            "name": "Ok",
            "onClick": [Function],
          },
          "secondary": Object {
            "name": "Cancel",
            "onClick": [Function],
          },
        }
      }
      headerClass="call_webhook"
      title="Call Webhook"
    >
      <TypeList
        __className=""
        initialType={
          Object {
            "aliases": Array [
              "split_by_webhook",
            ],
            "component": [Function],
            "description": "Call a webook",
            "form": undefined,
            "localization": [Function],
            "localizeableKeys": Array [
              "exits",
            ],
            "name": "Call Webhook",
            "type": "call_webhook",
          }
        }
        onChange={[MockFunction]}
      />
      <div
        className="method"
      >
        <SelectElement
          entry={
            Object {
              "value": Object {
                "label": "GET",
                "value": "GET",
              },
            }
          }
          name="MethodMap"
          onChange={[Function]}
          options={
            Array [
              Object {
                "label": "GET",
                "value": "GET",
              },
              Object {
                "label": "POST",
                "value": "POST",
              },
              Object {
                "label": "PUT",
                "value": "PUT",
              },
            ]
          }
        />
      </div>
      <div
        className="url"
      >
        <Connect(TextInputElement)
          autocomplete={true}
          entry={
            Object {
              "value": "",
            }
          }
          name="URL"
          onChange={[Function]}
          placeholder="Enter a URL"
        />
      </div>
      <div
        className="instructions"
      >
        <p>
          <React.Fragment>
            If you need to, you can also
             
            <span
              className="link"
              onClick={[Function]}
            >
              configure the headers
            </span>
             
            of your request.
             
          </React.Fragment>
          If your server responds with JSON, each property will be added to the Flow.
        </p>
        <pre
          className="code"
        >
          { "product": "Solar Charging Kit", "stock level": 32 }
        </pre>
        <p>
          In this example
           
          <span
            className="example"
          >
            @webhook.json.product
          </span>
           and
           
          <span
            className="example"
          >
            @webhook.json["stock level"]
          </span>
           
          would be available in all future steps.
        </p>
      </div>
    </Dialog>
  }
/>
`;

exports[`WebhookRouterForm updates should repopulate post body 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "",
        "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "GET",
    },
  },
  "postBody": Object {
    "value": null,
  },
  "url": Object {
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should repopulate post body 2`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "",
        "uuid": "477ac8b4-25e2-483a-8686-2d1332c4da1c",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": "POST",
  },
  "postBody": Object {
    "value": "{
    \\"flow\\": @(json(run.flow)),
    \\"path\\": @(json(run.path)),
    \\"results\\": @(json(run.results)),
    \\"input\\": @(json(run.input)),
    \\"channel\\": @(json(run.input.channel))
    \\"contact\\": @(json(contact))
}",
  },
  "url": Object {
    "value": "http://domain.com/",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: after flipped 1`] = `
Object {
  "flipped": true,
}
`;

exports[`WebhookRouterForm updates should save changes: after header removed 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "value": "",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "POST",
    },
  },
  "postBody": Object {
    "value": "Post Body",
  },
  "url": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: flipped back 1`] = `
Object {
  "flipped": false,
}
`;

exports[`WebhookRouterForm updates should save changes: intitial state 1`] = `
Object {
  "headers": Array [
    Object {
      "value": Object {
        "name": "",
        "uuid": "061fc171-8b79-4636-b892-bd0ea5aa9b42",
        "value": "",
      },
    },
    Object {
      "value": Object {
        "name": "Content-type",
        "uuid": "1dce2b34-9aab-4e20-81c4-3f0408dcb671",
        "value": "application/json",
      },
    },
  ],
  "method": Object {
    "value": Object {
      "value": "POST",
    },
  },
  "postBody": Object {
    "value": "Post Body",
  },
  "url": Object {
    "value": "",
  },
  "valid": true,
}
`;

exports[`WebhookRouterForm updates should save changes: save all the things 1`] = `
Array [
  Object {
    "inboundConnections": Object {},
    "node": Object {
      "actions": Array [
        Object {
          "body": "Post Body",
          "headers": Object {},
          "method": "POST",
          "type": "call_webhook",
          "url": "http://domain.com/",
          "uuid": "a564374c-ee42-4f13-8fc3-cda99f43b6ae",
        },
      ],
      "exits": Array [
        Object {
          "destination_node_uuid": null,
          "name": "Success",
          "uuid": "34bab8f0-4efa-40b7-a3c1-39ce856ea740",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Failed",
          "uuid": "ca80b96d-5178-4c0c-b98f-8f42e5fcc4f5",
        },
        Object {
          "destination_node_uuid": null,
          "name": "Unreachable",
          "uuid": "023db634-a097-4351-8662-8447d971ff74",
        },
      ],
      "router": Object {
        "cases": Array [
          Object {
            "arguments": Array [
              "success",
            ],
            "exit_uuid": "34bab8f0-4efa-40b7-a3c1-39ce856ea740",
            "type": "is_text_eq",
            "uuid": "89f9a8c0-e399-4c49-8409-43e37c318423",
          },
          Object {
            "arguments": Array [
              "response_error",
            ],
            "exit_uuid": "ca80b96d-5178-4c0c-b98f-8f42e5fcc4f5",
            "type": "is_text_eq",
            "uuid": "62e70441-a846-461d-8d57-4538d726b209",
          },
          Object {
            "arguments": Array [
              "connection_error",
            ],
            "exit_uuid": "023db634-a097-4351-8662-8447d971ff74",
            "type": "is_text_eq",
            "uuid": "eeb6ae86-f2ac-4ed2-a3b0-b211e0e5d4b3",
          },
        ],
        "default_exit_uuid": "ca80b96d-5178-4c0c-b98f-8f42e5fcc4f5",
        "operand": "@run.webhook",
        "type": "switch",
      },
      "uuid": "c6f278d5-2741-4c0a-880c-52a07dea91a5",
      "wait": null,
    },
    "ui": Object {
      "config": Object {},
      "position": null,
      "type": "split_by_webhook",
    },
  },
]
`;
